# mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/mcp_azure_storage/: README.md  __init__.py  client.py  config.py  datalake.py  models.py  server.py
src/mcp_json/: README.md  analyzer.py  models.py  requirements.txt  server.py
